# cmd/api/router/routes.go
@@ -10,8 +10,9 @@ import (
 func Routers(router *gin.Engine, handlers ports.ApiHandler) {
 	bikesRouter := router.Group("/v1/bikes")
 
-	bikesRouter.GET("/search", handlers.GetAllBikesHandler)
 	bikesRouter.GET("/byke/:hash_byke", handlers.GetBykeHandler)
+	bikesRouter.GET("/search", handlers.GetAllBikesHandler)
+	bikesRouter.GET("/placeholder", handlers.PlaceHolderHandler)
 
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 }
